--- a/index.html
+++ b/index.html
@@ -3,30 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>고용 알리미</title>
+  <title>고용24</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="splash" class="splash">
     <div class="splash-logo"><span>💼</span></div>
-    <div class="splash-title">고용 알리미</div>
+    <div class="splash-title">고용24</div>
     <div class="splash-sub">알기 쉬운 고용 정책 가이드</div>
     <button class="start-btn" onclick="startApp()">시작하기</button>
   </div>
 
   <header class="header">
     <div class="header-inner">
-      <h1>고용 알리미 홈</h1>
+      <h1>고용24</h1>
     </div>
   </header>
 
   <main class="container">
-    <section class="menu-list">
+    <div class="welcome-message">
+      일하는 당신을 위해<br><strong>고용24</strong>가 함께하겠습니다.
+    </div>
+
+    <section class="menu-grid">
       <p class="section-label">맞춤형 고용 서비스</p>
-      <a href="unemployment-check.html" class="list-item"><span>✅ 실업급여 수급조건</span><span class="arrow">›</span></a>
-      <a href="unemployment-calc.html" class="list-item"><span>🧮 실업급여 모의계산</span><span class="arrow">›</span></a>
-      <a href="support-info.html" class="list-item"><span>📋 국민취업지원제도</span><span class="arrow">›</span></a>
-      <a href="card-info.html" class="list-item"><span>💳 내일배움카드 안내</span><span class="arrow">›</span></a>
+      <div class="grid-container">
+        <a href="unemployment-check.html" class="grid-item">
+          <span class="icon">✅</span>
+          <span class="label">실업급여<br>수급조건</span>
+        </a>
+        <a href="unemployment-calc.html" class="grid-item">
+          <span class="icon">🧮</span>
+          <span class="label">실업급여<br>모의계산</span>
+        </a>
+        <a href="support-info.html" class="grid-item">
+          <span class="icon">📋</span>
+          <span class="label">국민취업<br>지원제도</span>
+        </a>
+        <a href="card-info.html" class="grid-item">
+          <span class="icon">💳</span>
+          <span class="label">내일배움<br>카드 안내</span>
+        </a>
+      </div>
     </section>
   </main>
 
@@ -39,7 +57,8 @@
     }
     (function() {
       if (sessionStorage.getItem('emp_splash') === 'true') {
-        document.getElementById('splash').style.display = 'none';
+        const splash = document.getElementById('splash');
+        if(splash) splash.style.display = 'none';
       }
     })();
   </script>
