--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           <strong>고용24</strong>가 든든한 파트너가 됩니다.
         </h2>
         <div class="intro-desc">
-          <p>고용24는 복잡하고 까다로운 고용 정책을 누구나 쉽게 이해하고 혜택을 누릴 수 있도록 돕는 스마트 가이드 서비스입니다.</p>
-          <p>갑작스러운 실업으로 인한 <strong>실업급여</strong> 수급부터, <strong>국민내일배움카드</strong>, <strong>국민취업지원제도</strong>까지. 당신에게 꼭 필요한 정보를 한곳에서 확인하세요.</p>
+          <p>고용24는 복잡하고 까다로운 고용 정책을 누구나 쉽게 이해하고 </p>
+          <p>혜택을 누릴 수 있도록 돕는 스마트 가이드 서비스입니다.</p>
+          <p>갑작스러운 실업으로 인한 <strong>실업급여</strong> 수급부터, <strong>국민내일배움카드</strong>, <strong>국민취업지원제도</strong>까지. </p>
+          <p>당신에게 꼭 필요한 정보를 한곳에서 확인하세요.</p>
         </div>
       </section>
 
