--- a/card-info.html
+++ b/card-info.html
@@ -9,18 +9,18 @@
   <style>
     .detail-card { background: white; padding: 25px; border-radius: 25px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f0f2f5; }
     .detail-card h2 { font-size: 19px; color: var(--navy-deep); margin: 0 0 15px; display: flex; align-items: center; gap: 8px; }
+    .detail-card h3 { font-size: 16px; color: #333; margin: 15px 0 10px; border-left: 3px solid #ffca28; padding-left: 10px; font-weight: 800; }
     .detail-card p { font-size: 14.5px; line-height: 1.7; color: #555; margin: 0 0 10px; }
     
-    .benefit-box { background: #fff9eb; padding: 18px; border-radius: 15px; border: 1px solid #ffeeba; margin: 10px 0 20px 0; }
-    .check-box { background: #fdfdfd; padding: 15px; border-radius: 15px; border: 1px solid #eee; margin-bottom: 20px; }
+    .benefit-box { background: #fff9eb; padding: 15px; border-radius: 15px; border: 1px solid #ffeeba; margin-top: 10px; }
+    .benefit-title { font-weight: 800; color: #856404; font-size: 15px; margin-bottom: 5px; display: block; }
 
-    .apply-btn {
-        display: block; width: 100%; padding: 20px; background: #1a237e !important; color: white !important;
-        text-align: center; text-decoration: none; border-radius: 18px; font-weight: 800;
-        font-size: 17px; margin: 10px 0; box-shadow: 0 8px 20px rgba(26, 35, 126, 0.2);
-        box-sizing: border-box;
-    }
-    .apply-btn:active { transform: scale(0.98); opacity: 0.9; }
+    .check-box { background: #fdfdfd; padding: 15px; border-radius: 15px; border: 1px solid #eee; margin-top: 10px; }
+    .check-list { list-style: none; padding: 0; margin: 0; font-size: 14px; color: #666; }
+    .check-list li { margin-bottom: 5px; }
+
+    .apply-btn { display: block; width: 100%; padding: 20px; background: var(--navy-deep); color: white; text-align: center; text-decoration: none; border-radius: 18px; font-weight: 800; font-size: 17px; margin-top: 15px; box-shadow: 0 8px 20px rgba(26, 35, 126, 0.2); box-sizing: border-box; }
+    .apply-btn:active { transform: scale(0.98); }
   </style>
 </head>
 <body>
@@ -33,22 +33,42 @@
   <main class="container">
     <section class="detail-card">
       <h2><span>💳</span> 제도 소개</h2>
-      <p>5년간 사용할 수 있는 <strong>국가 훈련비 지원 카드</strong>입니다.</p>
-      <div class="benefit-box">
-        <strong style="color:#856404;">지원금액:</strong> 기본 300만원 ~ 최대 500만원
-      </div>
+      <p>직업 능력 개발을 위해 <strong>국가에서 훈련비의 일부를 지원</strong>하는 카드로, 한 번 발급 시 5년간 사용 가능합니다.</p>
     </section>
 
     <section class="detail-card">
-      <h2><span>🚩</span> 제외 대상 확인</h2>
+      <h2><span>🎯</span> 지원 대상 (누가 받나요?)</h2>
+      <p>전 국민 신청 가능이 원칙이나, 아래의 <strong>제외 대상</strong>을 꼭 확인하세요.</p>
       <div class="check-box">
-        <p style="font-size:13px; color:#666; margin:0;">공무원, 사립학교 교직원, 졸업까지 2년 초과 남은 재학생, 고소득 자영업자 등은 제외됩니다.</p>
+        <ul class="check-list">
+          <li>• 현직 공무원 및 사립학교 교직원</li>
+          <li>• 연 매출 1억 5천만원 이상의 자영업자</li>
+          <li>• 월 임금 300만원 이상의 대기업 종사자(45세 미만)</li>
+          <li>• 졸업예정자 이외의 재학생</li>
+        </ul>
       </div>
     </section>
 
     <section class="detail-card">
-      <h2><span>📝</span> 신청 안내</h2>
-      <p>신분증과 계좌번호(농협/신한)를 준비해 주세요.</p>
+      <h2><span>💰</span> 지원 혜택</h2>
+      <div class="benefit-box">
+        <span class="benefit-title">지원 금액</span>
+        <p style="margin:0; color:#856404;">기본 300만원 ~ 최대 500만원 지원</p>
+      </div>
+      <p style="margin-top:15px;">훈련비의 45~85%가 지원되며, 출석률에 따라 <strong>훈련장려금</strong>도 추가로 받으실 수 있습니다.</p>
+    </section>
+
+    <section class="detail-card">
+      <h2><span>🔍</span> 학습 가능 분야</h2>
+      <p>IT·코딩, 영상 편집, 조리, 제과제빵, 바리스타, 회계, 세무, 자격증 취득 등 다양한 과정을 수강할 수 있습니다.</p>
+    </section>
+
+    <section class="detail-card">
+      <h2><span>📂</span> 신청 및 준비물</h2>
+      <h3>온라인 신청</h3>
+      <p>공인인증서 또는 간편인증만으로 고용24에서 신청 가능</p>
+      <h3>방문 신청 준비물</h3>
+      <p>신분증, 본인 명의 계좌번호(농협/신한), 근로계약서(필요시)</p>
       <a href="https://www.work24.go.kr" target="_blank" class="apply-btn">카드 발급 신청하기</a>
     </section>
   </main>
