--- a/support-info.html
+++ b/support-info.html
@@ -17,7 +17,7 @@
     .doc-list li { position: relative; padding-left: 20px; margin-bottom: 8px; font-size: 14px; color: #555; }
     .doc-list li::before { content: "•"; position: absolute; left: 0; color: var(--navy-light); font-weight: bold; }
 
-    /* 버튼 스타일 강화 및 여백 확보 */
+    /* 버튼 스타일 */
     .apply-btn {
         display: block; width: 100%; padding: 20px; background: #1a237e !important; color: white !important;
         text-align: center; text-decoration: none; border-radius: 18px; font-weight: 800;
@@ -51,6 +51,17 @@
     <section class="detail-card">
       <h2><span>💰</span> 주요 혜택</h2>
       <p><strong>구직촉진수당:</strong> 월 50만원씩 6개월 지원<br><strong>취업성공수당:</strong> 최대 150만원 추가 지원</p>
+    </section>
+
+    <section class="detail-card">
+      <h2><span>🔍</span> 취업지원 및 학습 프로그램</h2>
+      <p>단순 지원금뿐만 아니라 실질적인 취업 역량을 높이는 다양한 프로그램을 제공합니다.</p>
+      <ul class="doc-list">
+        <li><strong>직업훈련:</strong> 내일배움카드와 연계한 전문 기술 교육</li>
+        <li><strong>일 경험 프로그램:</strong> 기업 인턴십 및 직무 체험</li>
+        <li><strong>취업 스킬:</strong> 이력서 첨삭, 면접 코칭, 심리 상담</li>
+        <li><strong>고령자·특수계층:</strong> 맞춤형 재취업 특강 및 설계</li>
+      </ul>
     </section>
 
     <section class="detail-card">
