--- a/index.html
+++ b/index.html
@@ -6,6 +6,60 @@
   <title>고용24 - 스마트 정책 가이드</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquareRound@master/nanumsquareround.min.css">
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* 뉴스 섹션 전용 스타일 (기존 디자인을 해치지 않도록 설계) */
+    .news-section {
+      background: white;
+      border-radius: 25px;
+      padding: 20px;
+      margin: 25px 0; /* 버튼 그리드 아래에 적절한 간격 */
+      box-shadow: 0 4px 15px rgba(0,0,0,0.03);
+      border: 1px solid #f0f2f5;
+    }
+    .news-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .news-header h2 {
+      font-size: 16px;
+      color: var(--navy-deep);
+      font-weight: 800;
+      margin: 0;
+    }
+    .live-badge {
+      background: #ff5252;
+      color: white;
+      font-size: 9px;
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-weight: 800;
+      animation: blink 1.5s infinite;
+    }
+    .news-list { list-style: none; padding: 0; margin: 0; }
+    .news-item {
+      padding: 12px 0;
+      border-bottom: 1px solid #f8f9fa;
+    }
+    .news-item:last-child { border-bottom: none; }
+    .news-item a {
+      text-decoration: none;
+      color: #333;
+      font-size: 14px;
+      line-height: 1.5;
+      display: block;
+      font-weight: 500;
+    }
+    .news-date {
+      font-size: 11px;
+      color: #aaa;
+      margin-top: 6px;
+      display: block;
+    }
+    @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
+    .loading-text { font-size: 13px; color: #999; text-align: center; padding: 10px 0; }
+  </style>
 </head>
 <body class="is-loading">
   <div id="splash" class="splash">
@@ -58,10 +112,20 @@
           </a>
         </div>
       </section>
+
+      <section class="news-section">
+        <div class="news-header">
+          <h2>최신 고용 뉴스 <span class="live-badge">LIVE</span></h2>
+        </div>
+        <div id="news-container">
+          <p class="loading-text">최신 정보를 불러오는 중...</p>
+        </div>
+      </section>
     </main>
   </div>
 
   <script>
+    // 스플래시 제어 로직 (원본 유지)
     function startApp() {
       const splash = document.getElementById('splash');
       sessionStorage.setItem('emp_splash_viewed', 'true');
@@ -71,7 +135,33 @@
         document.body.classList.remove('is-loading');
       }, 500);
     }
+
+    // 뉴스 가져오기 기능
+    async function fetchLiveNews() {
+      const container = document.getElementById('news-container');
+      const keywords = encodeURIComponent('실업급여 국민내일배움카드 국민취업지원제도');
+      const rssUrl = `https://news.google.com/rss/search?q=${keywords}&hl=ko&gl=KR&ceid=KR:ko`;
+      const apiUrl = `https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssUrl)}`;
+
+      try {
+        const res = await fetch(apiUrl);
+        const data = await res.json();
+        if (data.status === 'ok') {
+          let html = '<ul class="news-list">';
+          data.items.slice(0, 3).forEach(item => {
+            const date = new Date(item.pubDate).toLocaleDateString('ko-KR', { month: 'short', day: 'numeric' });
+            html += `<li class="news-item"><a href="${item.link}" target="_blank"><strong>[공지]</strong> ${item.title} <span class="news-date">${date}</span></a></li>`;
+          });
+          html += '</ul>';
+          container.innerHTML = html;
+        }
+      } catch (e) {
+        container.innerHTML = '<p class="loading-text">뉴스를 불러올 수 없습니다.</p>';
+      }
+    }
+
     (function() {
+      fetchLiveNews(); // 뉴스 실행
       if (sessionStorage.getItem('emp_splash_viewed') === 'true') {
         const splash = document.getElementById('splash');
         if(splash) splash.style.display = 'none';
